WDZO-912: fixed begaviorType and offerDuration in PromoCampaignPage; fixed css
Squashed commit of the following:

commit 4b1da045b04b1343e1e01b1612b60fa9baf2aee9
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Mon Nov 16 17:58:03 2020 +0300

    WDZO-912: refactored

commit ee1f2524af16c1e2316149acf197a2deaba2734d
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Mon Nov 16 17:40:19 2020 +0300

    WDZO-912: fixed css for buttons in UsersPage

commit 7e30434581e9e7c12624e39cc0d85208bde44f19
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Mon Nov 16 16:55:06 2020 +0300

    WDZO-912: fixed begaviorType and offerDuration in PromoCampaignPage

--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -88,6 +88,7 @@
     position: relative;
     padding: 8px 15px;
     margin-right: 5px;
+    margin-bottom: 15px;
     bottom: -20px;
     display: inline-block;
 }
@@ -134,6 +135,15 @@
     overflow-wrap: break-word;
     width: 95%;
 }
+
 .template__link {
     padding-left: 5px;
+}
+
+.actionsPanelClasses {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
 }
